yiltc/testsuite/negative/default_param_non_const.yilt
// Error: non-constant default value (function call)
fn get_val() int
    return 42

fn compute(x int = get_val()) int
    return x

fn main()
    print(compute(5))
